--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,10 @@ board = SparkFun_RedBoard_Artemis_ATP
 framework = arduino
 upload_speed = 460800
 platform_packages = framework-arduinoapollo3@1.0.23
-lib_deps = 
+build_flags = -D ICM_20948_USE_DMP
+monitor_speed = 500000
+;monitor_speed = 115200
+lib_deps =
 	greiman/SdFat@^2.0.7
 	sparkfun/SparkFun 9DoF IMU Breakout - ICM 20948 - Arduino Library@^1.2.7
 	sparkfun/SparkFun I2C Mux Arduino Library@^1.0.1
