Make pio setup links consistant

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,8 @@ board = SparkFun_RedBoard_Artemis_ATP
 framework = arduino
 upload_speed = 460800
 monitor_speed = 115200
-platform_packages = 
+;monitor_speed = 500000
+platform_packages =
 	framework-arduinoapollo3@2.1.0
 	platformio/toolchain-gccarmnoneeabi@1.80201.181220
 ;	platformio/toolchain-gccarmnoneeabi@1.90201.191206
